src/FinancialForce Accounting/objects/AllocSchedule__c.object
<CustomObject>
    <customHelpPage>codahelpallocationscheduler</customHelpPage>
    <description>A scheduled allocation of templates to be run.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After__c</fullName>
        <defaultValue>0</defaultValue>
        <label>After</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Alloc Schedules</relationshipLabel>
        <relationshipName>AllocSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CronExpression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysBeforeOrAfterRunDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Before Or After Run Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysPriorToToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Prior To To Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateGenerated__c</fullName>
        <label>End Date Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NotificationType__c</fullName>
        <formula>IF(AND(TotalNumberOfErrors__c=0,TotalNumberOfAborts__c=0,TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(TotalNumberOfErrors__c = TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PeriodOption__c</fullName>
        <label>Period Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RunDate</fullName>
                </value>
                <value>
                    <fullName>TransactionDate</fullName>
                </value>
                <value>
                    <fullName>OffsetDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostingDateOption__c</fullName>
        <label>Posting Date Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SpecificDate</fullName>
                </value>
                <value>
                    <fullName>OffsetDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostingDate__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PostingOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Posting Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousFireTime__c</fullName>
        <label>Previous Fire Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreviousToDate__c</fullName>
        <label>Previous To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RetrieveTransactionsByMonth__c</fullName>
        <label>Retrieve Transactions By Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
                <value>
                    <fullName>Last3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetrieveTransactionsByPeriod__c</fullName>
        <label>Retrieve Transactions By Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
                <value>
                    <fullName>Last3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetrieveTransactionsOption__c</fullName>
        <label>Retrieve TransactionsOption Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RetrieveTransactionsSpecificDates</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsByPeriod</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsByMonth</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromFirstTransaction</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromDaysPriorToToDate</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromLastDates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleExpiresOption__c</fullName>
        <label>Schedule Ends</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
                <value>
                    <fullName>EndBy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>AllocScheduleLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AllocScheduleLog__c.IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AllocScheduleLog__c.AllocSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>AllocScheduleLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AllocScheduleLog__c.IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AllocScheduleLog__c.AllocSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>AllocScheduleLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>AllocScheduleLog__c.IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AllocScheduleLog__c.AllocSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryFilterItems>
            <field>AllocScheduleLog__c.IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AllocScheduleLog__c.AllocSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TransactionDescription__c</fullName>
        <label>Transaction description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserDefinedName__c</fullName>
        <description>The name of the scheduled allocation</description>
        <label>User Defined Name</label>
        <length>243</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Alloc Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alloc Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>